profilelist1exp/unpackaged/objects/DellEMC_Key_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <description>capture the record modifiers email address</description>
        <label>Action Performed By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Activate_Delete__c</fullName>
        <formula>IF((now()-LastModifiedDate)*24&gt;24, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DellEMC_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dell EMC Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria .</errorMessage>
            <filterItems>
                <field>User.Profile_Name__c</field>
                <operation>equals</operation>
                <value>Chatter Only</value>
            </filterItems>
            <filterItems>
                <field>User.Profile_Name__c</field>
                <operation>equals</operation>
                <value>GBL PRM Operations</value>
            </filterItems>
            <filterItems>
                <field>User.Profile_Name__c</field>
                <operation>equals</operation>
                <value>GBL PRM Operations Services Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>DellEMC_Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_Integration_Status__c</fullName>
        <label>EMC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Last_Sync_date__c</fullName>
        <label>EMC Last Sync date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMC_Operation__c</fullName>
        <label>EMC Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creation</fullName>
                    <default>true</default>
                    <label>Creation</label>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Updation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>DellEMC_Contact_Name__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_message__c</fullName>
        <label>Exception message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>DellEMC_Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Dell EMC Key Contacts</relationshipLabel>
        <relationshipName>Dell_EMC_Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>LEFT(DellEMC_Contact_Name__r.Phone, 12)</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Channel Account Plan</fullName>
                </value>
                <value>
                    <fullName>Channel Manager - BRS</fullName>
                </value>
                <value>
                    <fullName>Channel Manager - Education &amp; Svces</fullName>
                </value>
                <value>
                    <fullName>Channel Manager - IIG</fullName>
                </value>
                <value>
                    <fullName>Channel Manager - Ionix</fullName>
                </value>
                <value>
                    <fullName>Channel Manager - Renewals</fullName>
                </value>
                <value>
                    <fullName>Channel Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Dell EMC Services Account Manager</fullName>
                </value>
                <value>
                    <fullName>Field Marketing</fullName>
                </value>
                <value>
                    <fullName>National Account Manager</fullName>
                </value>
                <value>
                    <fullName>Partner Global Services Lead</fullName>
                </value>
                <value>
                    <fullName>Partner Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Partner Manager</fullName>
                </value>
                <value>
                    <fullName>Services Program Manager</fullName>
                </value>
                <value>
                    <fullName>Services Specialist</fullName>
                </value>
                <value>
                    <fullName>Technical Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dell EMC Key Contacts</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>DellEMC Key Contacts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dell EMC Key Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Partner_Track_For_DEKC</fullName>
        <active>true</active>
        <description>Can&apos;t change Partner Track field once created</description>
        <errorConditionFormula>AND( !(ISNEW()),ISCHANGED(Partner_Track__c))</errorConditionFormula>
        <errorMessage>Cannot change the Partner Track</errorMessage>
    </validationRules>
</CustomObject>